# IsoLog

./: .gitignore  README.md
IsoLog/: README.md  build.py  config.yml  pyproject.toml  pytest.ini
IsoLog/backend/: __init__.py  main.py  requirements.txt
IsoLog/backend/api/: __init__.py  main.py  websocket.py
IsoLog/backend/blockchain/: __init__.py  chain_manager.py  hash_computer.py  integrity_verifier.py  sync_exporter.py
IsoLog/backend/config/: __init__.py  settings.py
IsoLog/backend/detection/: __init__.py  engine.py  scorer.py
IsoLog/backend/ingestion/: __init__.py  file_watcher.py  ingestion_manager.py  pcap_processor.py  syslog_collector.py  usb_importer.py
IsoLog/backend/parsers/: __init__.py  base_parser.py  ecs_normalizer.py  parser_registry.py
IsoLog/backend/reporting/: __init__.py  generator.py
IsoLog/backend/storage/: __init__.py  alert_store.py  database.py  event_store.py  models.py  query_builder.py  search_index.py
IsoLog/backend/updates/: __init__.py  bundle.py  manager.py  verifier.py
IsoLog/backend/utils/: __init__.py  helpers.py
IsoLog/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
IsoLog/docs/: API.md  IMPLEMENTATION_PLAN.md  USER_GUIDE.md
IsoLog/sample_logs/: json_sample.jsonl
IsoLog/scripts/: build_update_package.py  debug_fields.py  generate_keys.py  test_mordor_parser.py  validate_detection.py
IsoLog/tests/: __init__.py
IsoLog/tests/backend/: __init__.py  test_api.py  test_blockchain.py  test_detection.py  (+1 more)
IsoLog/ui/: index.html  package-lock.json  package.json  vite.config.js
(+66 files in other folders)
